# simware

./: .gitignore  Cargo.toml  LICENSE  README.md
agent/: Cargo.toml
agent/src/: api_client.rs  main.rs  quarantine.rs
agent/src/interceptor/: macos.rs  mod.rs
agent/src/sandbox/: mod.rs  qemu.rs
agent/src/telemetry/: monitor.rs
backend/: dev.db  docker-compose.yml  package-lock.json  package.json  queue.js  server.js
backend/prisma/: dev.db  schema.prisma
backend/services/: aiHeuristics.js  threatIntel.js
backend/workers/: analysisWorker.js
crates/sentinelx-agent/: Cargo.toml
crates/sentinelx-agent/src/: lib.rs  main.rs  pipeline.rs
crates/sentinelx-ai/: Cargo.toml
crates/sentinelx-ai/src/: classifier.rs  explain.rs  lib.rs  predictor.rs
crates/sentinelx-api/: Cargo.toml
crates/sentinelx-api/src/: lib.rs  main.rs  routes.rs  state.rs
crates/sentinelx-behavior/: Cargo.toml
crates/sentinelx-behavior/src/: correlator.rs  lib.rs  monitor.rs
crates/sentinelx-core/: Cargo.toml
crates/sentinelx-core/src/: error.rs  file.rs  hash.rs  lib.rs  pipeline.rs  report.rs  risk.rs  session.rs  traits.rs
crates/sentinelx-decision/: Cargo.toml
crates/sentinelx-decision/src/: decision.rs  lib.rs  risk.rs
crates/sentinelx-interceptor/: Cargo.toml
crates/sentinelx-interceptor/src/: interceptor.rs  lib.rs  platform.rs
crates/sentinelx-reporting/: Cargo.toml
crates/sentinelx-reporting/src/: generator.rs  lib.rs
crates/sentinelx-sandbox/: Cargo.toml
crates/sentinelx-sandbox/src/: backend.rs  deception.rs  lib.rs  simulation.rs
crates/sentinelx-static-analysis/: Cargo.toml
crates/sentinelx-static-analysis/src/: analyzer.rs  entropy.rs  lib.rs  strings.rs  yara.rs
crates/sentinelx-storage/: Cargo.toml
crates/sentinelx-storage/src/: lib.rs  sqlite.rs
crates/sentinelx-threat-intel/: Cargo.toml
crates/sentinelx-threat-intel/src/: aggregator.rs  lib.rs  providers.rs
ui-designs/: analysis_report.html  analysis_workspace.html  dashboard.html  design-system.md  global_search.html
ui-mac/Simware/: ApiService.swift  App.swift  Color+Theme.swift  Typography.swift
ui-mac/Simware/Simware.app/Contents/: Info.plist
ui-mac/Simware/Simware.app/Contents/MacOS/: Simware
ui-mac/Simware/Views/: AnalysisReportView.swift  AnalysisWorkspaceView.swift  Components.swift  DashboardView.swift  GlobalSearchView.swift
ui-windows/: Simware.sln
ui-windows/Simware/: App.xaml  Simware.csproj
ui-windows/Simware/Models/: Analysis.cs
ui-windows/Simware/Services/: ApiService.cs
ui-windows/Simware/Views/: AnalysisWorkspaceControl.xaml  Controls.xaml.cs  DashboardControl.xaml  GlobalSearchControl.xaml  MainWindow.xaml  MainWindow.xaml.cs
