[workspace]
resolver = "2"
members = [
    "crates/sentinelx-core",
    "crates/sentinelx-interceptor",
    "crates/sentinelx-static-analysis",
    "crates/sentinelx-threat-intel",
    "crates/sentinelx-sandbox",
    "crates/sentinelx-behavior",
    "crates/sentinelx-ai",
    "crates/sentinelx-decision",
    "crates/sentinelx-reporting",
    "crates/sentinelx-storage",
    "crates/sentinelx-api",
    "crates/sentinelx-agent",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["SentinelX Contributors"]
repository = "https://github.com/sentinelx/sentinelx"

[workspace.dependencies]
sentinelx-core = { path = "crates/sentinelx-core" }
sentinelx-interceptor = { path = "crates/sentinelx-interceptor" }
sentinelx-static-analysis = { path = "crates/sentinelx-static-analysis" }
sentinelx-threat-intel = { path = "crates/sentinelx-threat-intel" }
sentinelx-sandbox = { path = "crates/sentinelx-sandbox" }
sentinelx-behavior = { path = "crates/sentinelx-behavior" }
sentinelx-ai = { path = "crates/sentinelx-ai" }
sentinelx-decision = { path = "crates/sentinelx-decision" }
sentinelx-reporting = { path = "crates/sentinelx-reporting" }
sentinelx-storage = { path = "crates/sentinelx-storage" }

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"
sha2 = "0.10"
hex = "0.4"
blake3 = "1"
regex = "1"
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite", "uuid", "chrono", "json"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tonic = "0.12"
prost = "0.13"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
