[package]
name = "sentinelx-agent"
description = "SentinelX analysis pipeline orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sentinelx-agent"
path = "src/main.rs"

[dependencies]
sentinelx-core = { workspace = true }
sentinelx-interceptor = { workspace = true }
sentinelx-static-analysis = { workspace = true }
sentinelx-threat-intel = { workspace = true }
sentinelx-sandbox = { workspace = true }
sentinelx-behavior = { workspace = true }
sentinelx-ai = { workspace = true }
sentinelx-decision = { workspace = true }
sentinelx-reporting = { workspace = true }
sentinelx-storage = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
