[package]
name = "sentinelx-ai"
description = "AI risk prediction and explainability engines"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sentinelx-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
