[package]
name = "sentinelx-api"
description = "SentinelX REST API server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sentinelx-api"
path = "src/main.rs"

[dependencies]
sentinelx-core = { workspace = true }
sentinelx-agent = { workspace = true }
sentinelx-storage = { workspace = true }
sentinelx-reporting = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
anyhow = { workspace = true }
