[package]
name = "sentinelx-behavior"
description = "Behavioral monitoring and correlation engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sentinelx-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
