[package]
name = "sentinelx-reporting"
description = "Report generation and export"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sentinelx-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
