[package]
name = "sentinelx-sandbox"
description = "Disposable isolated execution sandbox abstraction"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sentinelx-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tempfile = "3"

[dev-dependencies]
tempfile = "3"
