[package]
name = "sentinelx-static-analysis"
description = "Static file analysis engine with YARA and MITRE mapping"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sentinelx-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
