[package]
name = "sentinelx-storage"
description = "Persistent storage for analysis sessions and telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sentinelx-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
