[package]
name = "sentinelx-threat-intel"
description = "Provider-agnostic threat intelligence integration"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sentinelx-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
